fixing some stuff with request types, echo router, zap logger middleware, authentication middleware, updated tests, need to update message validation test
